--- a/.github/workflows/readme-scribe.yml
+++ b/.github/workflows/readme-scribe.yml
@@ -8,24 +8,23 @@ on:
   workflow_dispatch:
 
 jobs:
-  markscribe:
+  readme-scribe:
     runs-on: ubuntu-22.04
-
     steps:
       - uses: actions/checkout@v4
-
-      - uses: muesli/readme-scribe@master
+      - name: Generate README.md
+        uses: muesli/readme-scribe@v0.1
         env:
           GITHUB_TOKEN: ${{ secrets.PERSONAL_GITHUB_TOKEN }}
         with:
           template: "templates/README.md.tpl"
           writeTo: "README.md"
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Commit README.md
+        uses: stefanzweifel/git-auto-commit-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          commit_message: Update generated README
+          commit_message: "docs: update README.md"
           branch: main
           commit_user_name: readme-scribe 🤖
           commit_user_email: actions@github.com
